# timewarrior-report-timedutty

./: README.md  mypy.ini  pyproject.toml
src/timewarrior_report_timedutty/: __init__.py
tests/: test_timedutty.py
